--- a/src/app/components/perfil.component/perfil.component.html
+++ b/src/app/components/perfil.component/perfil.component.html
@@ -79,27 +79,42 @@
 
     <div *ngFor="let evento of eventos" class="event-card-wrapper">
 
-      <!-- TARJETA EVENTO -->
-      <div class="event-card" (click)="seleccionarEvento(evento)">
-        <span class="event-title">evento</span>
-        <span class="event-date">
-          <span class="event-date-icon">📅</span>
-          <span>fecha</span>
-        </span>
-      </div>
-
-      <!-- ACTIVIDADES (aparece al seleccionar evento) -->
-      <div class="activities-content" *ngIf="idEvento === evento">
-        <app-actividades [idEvento]="idEvento"></app-actividades>
-      </div>
-
+  <!-- TARJETA EVENTO -->
+  <div class="event-card" (click)="seleccionarEvento(evento.idEvento)">
+    <div class="event-date">
+      <span class="date-day">{{ evento.fechaEvento | date:'dd' }}</span>
+      <span class="date-month">{{ evento.fechaEvento | date:'MMM' | uppercase }}</span>
     </div>
-    
+    <div class="event-info">
+      <div class="event-time">
+        <i class="bi bi-clock me-2"></i>
+        {{ evento.fechaEvento | date:'HH:mm' }}h
+      </div>
+    </div>
   </div>
+
+  <!-- CARD DE ACTIVIDAD (debajo del evento) -->
+  <div *ngIf="idEventoSeleccionado === evento.idEvento" 
+     class="activity-card mt-2 p-3 shadow-sm rounded-4 border">
+  
+  <h5 class="activity-title">🎯 {{ nombreActividad }}</h5>
+
+  <div class="activity-info d-flex align-items-center gap-2 mb-2">
+    <span class="activity-icon">🧑‍✈️</span>
+    <span class="activity-text">
+      {{ quiereSerCapitan ? 'Quiere ser capitán' : 'No quiere ser capitán' }}
+    </span>
+  </div>
+
+  <div class="activity-info d-flex align-items-center gap-2">
+    <span class="activity-icon">📅</span>
+    <span class="activity-text"> Inscripción realizada el {{ fechaInscripcion | date:'dd/MM/yyyy' }}</span>
+  </div>
+
 </div>
+
+
 
 <div *ngIf="eventos && eventos.length === 0" class="custom-navbar p-4 rounded-4 shadow-sm mt-3 text-muted text-center">
   No estás inscrito a ningún evento.
 </div>
-
-
