--- a/src/app/components/actividades/actividades.component.html
+++ b/src/app/components/actividades/actividades.component.html
@@ -31,11 +31,15 @@
 							<i class="bi bi-calendar-event"></i>
 							<span>{{actividad.fechaEvento | date: 'dd MMM yyyy'}}</span>
 						</div>
-						@if(actividad.nombreActividad.toLowerCase() === "futbol") {
+						@if(actividad.nombreActividad.toLowerCase() === "futbol" || actividad.nombreActividad.toLowerCase() === "basket") {
 						<div class="info-item">
 							<i class="bi bi-people-fill"></i>		
 							<span>Mín. {{actividad.minimoJugadores}} jugadores</span>
 						</div>
+						<button class="btn-view-teams" (click)="verEquipos(actividad.idActividad, idEvento)">
+							<i class="bi bi-shield-shaded"></i>
+							<span>Ver Equipos</span>
+						</button>
 						}
 					</div>
 				</div>
