--- a/src/app/components/navbar.component/navbar.component.html
+++ b/src/app/components/navbar.component/navbar.component.html
@@ -25,9 +25,9 @@
 
         <li class="nav-item">
           <a class="nav-link nav-pill-item me-2" 
-             [routerLink]="['/eventos']" 
+             [routerLink]="['/materiales']" 
              routerLinkActive="active-link">
-            <i class="bi bi-calendar-event-fill me-2"></i> Eventos
+            <i class="bi bi-calendar-event-fill me-2"></i> Materiales
           </a>
         </li>
 
